--- a/vibeify/src/App.scss
+++ b/vibeify/src/App.scss
@@ -5,6 +5,10 @@ $greyText: #b3b3b3;
 $greyNav: #090909;
 $greenMain: #1db954;
 
+* {
+  box-sizing: border-box;
+}
+
 .App {
   height: calc(100vh - 90px);
   background: $greyLight;
@@ -104,6 +108,8 @@ $greenMain: #1db954;
     padding: 1.3rem;
     .cardImage {
       height: 160px;
+      box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.3),
+        0 1px 2px 0 rgba(0, 0, 0, 0.2);
       img {
         width: 100%;
         height: 100%;
