--- a/vibeify/src/components/Sidebar.css
+++ b/vibeify/src/components/Sidebar.css
@@ -7,4 +7,13 @@
     padding-left: 10px;
     padding-right: 10px;
     background-color: #040404;
+    
 }
+
+.sidebar_logo {
+    margin-right: auto;
+    height: 100px;
+    padding: 10px;
+}
+
+
