current build has error loading in user's playlists

--- a/vibeify/src/components/SidebarOption.css
+++ b/vibeify/src/components/SidebarOption.css
@@ -7,6 +7,13 @@
     transition: 200ms color ease-in;
 }
 
+/* styles horizontal row */
+.sidebar > hr {
+    border: 1px solid #282828;
+    width: 90%;
+    margin: 10px auto;
+}
+
 .sidebarOption:hover {
     color: white;
 }
