--- a/vibeify/src/components/Sidebar.css
+++ b/vibeify/src/components/Sidebar.css
@@ -16,4 +16,15 @@
     padding: 10px;
 }
 
+.sidebar_title {
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 12px;
+    
+}
+
+.sidebarOption > p {
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
