conditional render in header for non user

--- a/vibeify-react/src/components/components_css/Header.css
+++ b/vibeify-react/src/components/components_css/Header.css
@@ -1,29 +1,57 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
-  }
-  
-  .header_right {
-    display: flex;
-    align-items: center;
-  }
-  
-  .header_left {
-    flex: 0.5;
-    display: flex;
-    background-color: white;
-    padding: 10px;
-    border-radius: 30px;
-    color: gray;
-    align-items: center;
-  }
-  
-  .header_left > input {
-    border: none;
-    width: 100%;
-  }
-  
-  .header_right > h4 {
-    margin-left: 10px;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  padding: 0.5rem 1rem;
+}
+
+.header__title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
+  margin-right: 1rem;
+}
+
+.header_right {
+  display: flex;
+  align-items: center;
+}
+
+.header_left {
+  display: flex;
+  flex: 0.5;
+  align-items: center;
+}
+
+.search-bar {
+  flex: auto;
+  display: flex;
+  background-color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 30px;
+  color: gray;
+  align-items: center;
+}
+
+.search-bar:focus-within {
+  border: 2px solid #1db954;
+}
+
+.search-bar__input {
+  flex: auto;
+  border: 0px;
+}
+
+.search-bar__input:focus {
+  outline: transparent;
+}
+
+.header_left > input {
+  border: none;
+  width: 100%;
+}
+
+.header_right > h4 {
+  margin-left: 10px;
+}
