--- a/vibeify-react/src/components/components_css/Body.css
+++ b/vibeify-react/src/components/components_css/Body.css
@@ -2,8 +2,7 @@
   padding: 30px;
   width: 100%;
   height: 100vh;
-  overflow-y: overlay;
-  flex: 0.8;
+  overflow-y: scroll;
   color: white;
   background: linear-gradient(transparent, rgba(0, 0, 0, 1));
   background-color: rgb(91, 87, 115);
@@ -73,4 +72,3 @@
 .body_infoText > p {
   font-size: 14px;
 }
-
