--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
+$main-font: 'Roboto Slab';
+
+$font-family-sans-serif: 'Roboto Slab', 'serif';
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
