--- a/src/components/search/details.module.scss
+++ b/src/components/search/details.module.scss
@@ -6,13 +6,14 @@
     z-index: -2;
 
     .summary &::after {
+        z-index: 0;
         content: "";
         position: absolute;
-        top: 0;
+        top: 50%;
         bottom: 0;
         left: 0;
         right: 0;
-        background-image: linear-gradient(to bottom, transparent 70%, $dark 95%);
+        background-image: linear-gradient(to bottom, transparent 50%, $dark 95%);
     }
 }
 
