withrouter for register

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+$body-bg: #f4f2e9;
+$primary: #58371F;
+$dark: #211804;
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
